force-app/main/default/objects/ARF_Collection_Strategy__c/ARF_Collection_Strategy__c.object-meta.xml
<CustomObject>
    <description>Dunning strategy templates with configurable steps</description>
    <label>Collection Strategy</label>
    <nameField>
        <displayFormat>ARF-{0000}</displayFormat>
        <label>Collection Strategy Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collection Strategies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>