force-app/main/default/objects/ARF_Collection_Strategy__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this strategy is currently active</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>