force-app/main/default/objects/ARF_Collection_Strategy__c/fields/Assignment_Rules__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Rules__c</fullName>
    <description>JSON rules for auto-assigning this strategy</description>
    <label>Assignment Rules</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>