force-app/main/default/objects/ARF_Collection_Strategy__c/fields/Steps_JSON__c.field-meta.xml
<CustomField>
    <fullName>Steps_JSON__c</fullName>
    <description>JSON configuration of strategy steps</description>
    <label>Steps Configuration</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>