force-app/main/default/objects/ARF_Collection_Strategy__c/fields/Strategy_Name__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Name__c</fullName>
    <description>Display name for this strategy</description>
    <label>Strategy Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>