force-app/main/default/objects/ARF_Collection_Strategy__c/fields/Total_Steps__c.field-meta.xml
<CustomField>
    <fullName>Total_Steps__c</fullName>
    <description>Number of steps in this strategy</description>
    <label>Total Steps</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>